src/bindings.h

// Callback typedefs owned by bindings.cpp (the mixer-output, visualization,
// buffering and metadata callback typedefs come from enums.h and
// audiobuffer/metadata_ffi.h).
typedef void (*dartVoiceEndedCallback_t)(unsigned int *);
  /// Play already loaded sound identified by [hash]
  ///
  /// [soundHash] the unique sound hash of a sound
  /// [busId] the bus ID to play the sound on. 0 means the main engine.
  /// [volume] 1.0f full volume
  /// [pan] 0.0f centered
  /// [paused] 0 not paused
  /// [looping] whether to start the sound in looping state.
  /// [loopingStartAt] If looping is enabled, the loop point is, by default,
  /// the start of the stream. The loop start point can be set with this
  /// [loopingStartOffsetAt] Optional exact frame offset to restart looping
  /// from (-1 = inactive).
  /// [loopingEndOffsetAt] Optional exact frame offset to loop before
  /// (-1 = inactive).
  /// [scale] relative playback speed multiplier (1.0f = normal speed).
  /// [handle] pointer to the handle for this new sound
  /// Return the error if any and a new [handle] of this sound
  FFI_PLUGIN_EXPORT enum PlayerErrors play(
      unsigned int soundHash, unsigned int busId, float volume, float pan,
      bool paused, bool looping, double loopingStartAt, double loopingEndAt,
      int loopingStartOffsetAt, int loopingEndOffsetAt, float scale,
      unsigned int *handle);
  /// Stop already loaded sound identified by [handle] and clear it
  ///
  /// [handle]
  /// Returns [PlayerErrors.noError] if success, [PlayerErrors.backendNotInited]
  /// if the engine is not initialized, [PlayerErrors.soundHandleNotFound] if
  /// [handle] is not valid (for example the voice has already ended).
  FFI_PLUGIN_EXPORT enum PlayerErrors stop(unsigned int handle);
  /// You can set and get the current value of the speed of
  /// sound width the get3dSoundSpeed() and set3dSoundSpeed() functions.
  /// The speed of sound is used to calculate doppler effects in
  /// addition to the distance delay.
  ///
  /// Since SoLoud has no knowledge of the scale of your coordinates,
  /// you may need to adjust the speed of sound for these effects
  /// to work correctly. The default value is 343, which assumes
  /// that your world coordinates are in meters (where 1 unit is 1 meter),
  /// and that the environment is dry air at around 20 degrees Celsius.
  FFI_PLUGIN_EXPORT void set3dSoundSpeed(float speed);
  /// Get the sound speed
  FFI_PLUGIN_EXPORT float get3dSoundSpeed();
  /// You can set the position, at-vector, up-vector and velocity
  /// parameters of the 3d audio listener with one call
  FFI_PLUGIN_EXPORT void set3dListenerParameters(
      float posX, float posY, float posZ, float atX, float atY, float atZ,
      float upX, float upY, float upZ, float velocityX, float velocityY,
      float velocityZ);
  /// You can set the position parameter of the 3d audio listener
  FFI_PLUGIN_EXPORT void set3dListenerPosition(float posX, float posY,
                                               float posZ);
  /// You can set the "at" vector parameter of the 3d audio listener
  FFI_PLUGIN_EXPORT void set3dListenerAt(float atX, float atY, float atZ);
  /// You can set the "up" vector parameter of the 3d audio listener
  FFI_PLUGIN_EXPORT void set3dListenerUp(float upX, float upY, float upZ);
  /// You can set the listener's velocity vector parameter
  FFI_PLUGIN_EXPORT void set3dListenerVelocity(float velocityX,
                                               float velocityY,
                                               float velocityZ);
  /// You can set the position and velocity parameters of a live
  /// 3d audio source with one call
  FFI_PLUGIN_EXPORT void set3dSourceParameters(unsigned int handle,
                                               float posX, float posY,
                                               float posZ, float velocityX,
                                               float velocityY,
                                               float velocityZ);
  /// You can set the position parameters of a live 3d audio source
  FFI_PLUGIN_EXPORT void set3dSourcePosition(unsigned int handle, float posX,
                                             float posY, float posZ);
  /// You can set the velocity parameters of a live 3d audio source
  FFI_PLUGIN_EXPORT void set3dSourceVelocity(unsigned int handle,
                                             float velocityX,
                                             float velocityY,
                                             float velocityZ);
  /// You can set the minimum and maximum distance parameters
  /// of a live 3d audio source
  FFI_PLUGIN_EXPORT void set3dSourceMinMaxDistance(unsigned int handle,
                                                   float minDistance,
                                                   float maxDistance);
  /// You can change the attenuation model and rolloff factor parameters
  /// of a live 3d audio source.
  /// The default values are NO_ATTENUATION and 1.
  ///
  /// NO_ATTENUATION          No attenuation
  /// INVERSE_DISTANCE        Inverse distance attenuation model
  /// LINEAR_DISTANCE         Linear distance attenuation model
  /// EXPONENTIAL_DISTANCE    Exponential distance attenuation model
  FFI_PLUGIN_EXPORT void set3dSourceAttenuation(
      unsigned int handle, unsigned int attenuationModel,
      float attenuationRolloffFactor);
  /// You can change the doppler factor of a live 3d audio source
  FFI_PLUGIN_EXPORT void set3dSourceDopplerFactor(unsigned int handle,
                                                  float dopplerFactor);
  /////////////////////////////////////////
  /// waveform audio data
  /////////////////////////////////////////

  FFI_PLUGIN_EXPORT enum ReadSamplesErrors
  readSamplesFromFile(const char *filePath, float startTime, float endTime,
                      unsigned long numSamplesNeeded, bool average,
                      float *pSamples);
  FFI_PLUGIN_EXPORT enum ReadSamplesErrors
  readSamplesFromMem(const unsigned char *buffer, unsigned long dataSize,
                     float startTime, float endTime,
                     unsigned long numSamplesNeeded, bool average,
                     float *pSamples);
  /////////////////////////////////////////
  /// Mixing Bus
  /// https://solhsa.com/soloud/mixbus.html
  /// https://solhsa.com/soloud/soloud_20200207.html#mixing-bus
  ///
  /// A mixing bus is a special audio source that plays other audio sources
  /// through it. Useful for grouped volume control, per-bus filtering,
  /// and per-bus visualization (FFT/wave). Busses can also be nested.
  /// Only one instance of a bus can play at a time.
  /// Busses are protected by default and marked as "must tick".
  /////////////////////////////////////////

  /// Create a new mixing bus.
  /// Returns a unique bus ID (>0) to reference this bus in other calls.
  FFI_PLUGIN_EXPORT unsigned int createBus();
  /// Destroy a mixing bus by its ID.
  /// Does not stop voices that were playing through the bus.
  FFI_PLUGIN_EXPORT void destroyBus(unsigned int busId);
  /// Play the bus itself on the main SoLoud engine so it becomes audible.
  /// You must call this before sounds routed through the bus can be heard.
  ///
  /// [busId] the bus ID returned by createBus.
  /// [volume] playback volume (1.0 = full).
  /// [paused] whether to start paused.
  /// [handle] set to the voice handle of the bus, or 0 on error.
  /// Returns [PlayerErrors.noError] if success, [PlayerErrors.backendNotInited]
  /// if the engine is not initialized, [PlayerErrors.busIdNotFound] if [busId]
  /// is unknown, [PlayerErrors.failedToStartPlayback] if no voice could be
  /// created for the bus. When [paused] is false the output device is started
  /// asynchronously after the bus voice exists, so this never reports
  /// [PlayerErrors.audioDeviceFailedToStart].
  ///
  /// Note: to play a sound through a bus, the play() function is used with
  /// the bus ID as an argument. See play() for more information.
  FFI_PLUGIN_EXPORT enum PlayerErrors busPlayOnEngine(unsigned int busId,
                                                      float volume,
                                                      bool paused,
                                                      unsigned int *handle);
  /// Set the number of output channels for the bus (default is 2 = stereo).
  ///
  /// [busId] the bus ID.
  /// [channels] number of channels (1 = mono, 2 = stereo, etc.).
  FFI_PLUGIN_EXPORT int busSetChannels(unsigned int busId,
                                       unsigned int channels);
  /// Enable or disable visualization data gathering for this bus.
  /// Must be enabled before calling busCalcFFT, busGetWave,
  /// or busGetApproximateVolume.
  ///
  /// [busId] the bus ID.
  /// [enable] true to enable, false to disable.
  FFI_PLUGIN_EXPORT void busSetVisualizationEnable(unsigned int busId,
                                                   bool enable);
  /// Calculate and return 256 floats of FFT data for this bus.
  /// The data ranges from low to high frequencies.
  /// Visualization must be enabled first with busSetVisualizationEnable.
  ///
  /// [busId] the bus ID.
  /// Returns a pointer to 256 floats, or nullptr if the bus is not found.
  FFI_PLUGIN_EXPORT float *busCalcFFT(unsigned int busId);
  /// Get 256 samples of wave data currently playing through this bus.
  /// Visualization must be enabled first with busSetVisualizationEnable.
  ///
  /// [busId] the bus ID.
  /// Returns a pointer to 256 floats, or nullptr if the bus is not found.
  FFI_PLUGIN_EXPORT float *busGetWave(unsigned int busId);
  /// Get the approximate output volume for a specific channel of this bus.
  /// Useful for VU meters or level indicators.
  /// Visualization must be enabled first.
  ///
  /// [busId] the bus ID.
  /// [channel] the output channel index (0 = left, 1 = right, etc.).
  /// Returns the approximate volume, or 0 if the bus is not found.
  FFI_PLUGIN_EXPORT float busGetApproximateVolume(unsigned int busId,
                                                  unsigned int channel);
  /// Move a live voice (identified by its handle) into this bus.
  /// The voice will be reparented so it plays through the bus.
  /// Useful for dynamically routing sounds in/out of filtered busses.
  ///
  /// [busId] the bus ID.
  /// [voiceHandle] handle of the voice to annex.
  FFI_PLUGIN_EXPORT void busAnnexSound(unsigned int busId,
                                       unsigned int voiceHandle);
  /// Get the number of voices currently playing through this bus.
  ///
  /// [busId] the bus ID.
  /// Returns the active voice count, or 0 if the bus is not found.
  FFI_PLUGIN_EXPORT unsigned int busGetActiveVoiceCount(unsigned int busId);