lib/src/bindings/flutter_soloud_ffigen.dart


/// You can set and get the current value of the speed of
/// sound width the get3dSoundSpeed() and set3dSoundSpeed() functions.
/// The speed of sound is used to calculate doppler effects in
/// addition to the distance delay.
///
/// Since SoLoud has no knowledge of the scale of your coordinates,
/// you may need to adjust the speed of sound for these effects
/// to work correctly. The default value is 343, which assumes
/// that your world coordinates are in meters (where 1 unit is 1 meter),
/// and that the environment is dry air at around 20 degrees Celsius.
@ffi.Native<ffi.Void Function(ffi.Float)>()
external void set3dSoundSpeed(double speed);

/// Get the sound speed
@ffi.Native<ffi.Float Function()>()
external double get3dSoundSpeed();

/// You can set the position, at-vector, up-vector and velocity
/// parameters of the 3d audio listener with one call
@ffi.Native<
  ffi.Void Function(
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
  )
>()
external void set3dListenerParameters(
  double posX,
  double posY,
  double posZ,
  double atX,
  double atY,
  double atZ,
  double upX,
  double upY,
  double upZ,
  double velocityX,
  double velocityY,
  double velocityZ,
);

/// You can set the position parameter of the 3d audio listener
@ffi.Native<ffi.Void Function(ffi.Float, ffi.Float, ffi.Float)>()
external void set3dListenerPosition(double posX, double posY, double posZ);

/// You can set the "at" vector parameter of the 3d audio listener
@ffi.Native<ffi.Void Function(ffi.Float, ffi.Float, ffi.Float)>()
external void set3dListenerAt(double atX, double atY, double atZ);

/// You can set the "up" vector parameter of the 3d audio listener
@ffi.Native<ffi.Void Function(ffi.Float, ffi.Float, ffi.Float)>()
external void set3dListenerUp(double upX, double upY, double upZ);

/// You can set the listener's velocity vector parameter
@ffi.Native<ffi.Void Function(ffi.Float, ffi.Float, ffi.Float)>()
external void set3dListenerVelocity(
  double velocityX,
  double velocityY,
  double velocityZ,
);

/// You can set the position and velocity parameters of a live
/// 3d audio source with one call
@ffi.Native<
  ffi.Void Function(
    ffi.UnsignedInt,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
  )
>()
external void set3dSourceParameters(
  int handle,
  double posX,
  double posY,
  double posZ,
  double velocityX,
  double velocityY,
  double velocityZ,
);

/// You can set the position parameters of a live 3d audio source
@ffi.Native<
  ffi.Void Function(ffi.UnsignedInt, ffi.Float, ffi.Float, ffi.Float)
>()
external void set3dSourcePosition(
  int handle,
  double posX,
  double posY,
  double posZ,
);

/// You can set the velocity parameters of a live 3d audio source
@ffi.Native<
  ffi.Void Function(ffi.UnsignedInt, ffi.Float, ffi.Float, ffi.Float)
>()
external void set3dSourceVelocity(
  int handle,
  double velocityX,
  double velocityY,
  double velocityZ,
);

/// You can set the minimum and maximum distance parameters
/// of a live 3d audio source
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Float, ffi.Float)>()
external void set3dSourceMinMaxDistance(
  int handle,
  double minDistance,
  double maxDistance,
);

/// You can change the attenuation model and rolloff factor parameters
/// of a live 3d audio source.
/// The default values are NO_ATTENUATION and 1.
///
/// NO_ATTENUATION          No attenuation
/// INVERSE_DISTANCE        Inverse distance attenuation model
/// LINEAR_DISTANCE         Linear distance attenuation model
/// EXPONENTIAL_DISTANCE    Exponential distance attenuation model
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.UnsignedInt, ffi.Float)>()
external void set3dSourceAttenuation(
  int handle,
  int attenuationModel,
  double attenuationRolloffFactor,
);

/// You can change the doppler factor of a live 3d audio source
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Float)>()
external void set3dSourceDopplerFactor(int handle, double dopplerFactor);

/// //////////////////////////////////////
/// waveform audio data
/// //////////////////////////////////////
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ffi.Char>,
    ffi.Float,
    ffi.Float,
    ffi.UnsignedLong,
    ffi.Bool,
    ffi.Pointer<ffi.Float>,
  )
>(symbol: 'readSamplesFromFile')
external int _readSamplesFromFile(
  ffi.Pointer<ffi.Char> filePath,
  double startTime,
  double endTime,
  int numSamplesNeeded,
  bool average,
  ffi.Pointer<ffi.Float> pSamples,
);

ReadSamplesErrors readSamplesFromFile(
  ffi.Pointer<ffi.Char> filePath,
  double startTime,
  double endTime,
  int numSamplesNeeded,
  bool average,
  ffi.Pointer<ffi.Float> pSamples,
) => ReadSamplesErrors.fromValue(
  _readSamplesFromFile(
    filePath,
    startTime,
    endTime,
    numSamplesNeeded,
    average,
    pSamples,
  ),
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UnsignedLong,
    ffi.Float,
    ffi.Float,
    ffi.UnsignedLong,
    ffi.Bool,
    ffi.Pointer<ffi.Float>,
  )
>(symbol: 'readSamplesFromMem')
external int _readSamplesFromMem(
  ffi.Pointer<ffi.UnsignedChar> buffer,
  int dataSize,
  double startTime,
  double endTime,
  int numSamplesNeeded,
  bool average,
  ffi.Pointer<ffi.Float> pSamples,
);

ReadSamplesErrors readSamplesFromMem(
  ffi.Pointer<ffi.UnsignedChar> buffer,
  int dataSize,
  double startTime,
  double endTime,
  int numSamplesNeeded,
  bool average,
  ffi.Pointer<ffi.Float> pSamples,
) => ReadSamplesErrors.fromValue(
  _readSamplesFromMem(
    buffer,
    dataSize,
    startTime,
    endTime,
    numSamplesNeeded,
    average,
    pSamples,
  ),
);

/// Create a new mixing bus.
/// Returns a unique bus ID (>0) to reference this bus in other calls.
@ffi.Native<ffi.UnsignedInt Function()>()
external int createBus();

/// Destroy a mixing bus by its ID.
/// Does not stop voices that were playing through the bus.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt)>()
external void destroyBus(int busId);

/// Play the bus itself on the main SoLoud engine so it becomes audible.
/// You must call this before sounds routed through the bus can be heard.
///
/// [busId] the bus ID returned by createBus.
/// [volume] playback volume (1.0 = full).
/// [paused] whether to start paused.
/// [handle] set to the voice handle of the bus, or 0 on error.
/// Returns [PlayerErrors.noError] if success, [PlayerErrors.backendNotInited]
/// if the engine is not initialized, [PlayerErrors.busIdNotFound] if [busId]
/// is unknown, [PlayerErrors.failedToStartPlayback] if no voice could be
/// created for the bus. When [paused] is false the output device is started
/// asynchronously after the bus voice exists, so this never reports
/// [PlayerErrors.audioDeviceFailedToStart].
///
/// Note: to play a sound through a bus, the play() function is used with
/// the bus ID as an argument. See play() for more information.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.Float,
    ffi.Bool,
    ffi.Pointer<ffi.UnsignedInt>,
  )
>(symbol: 'busPlayOnEngine')
external int _busPlayOnEngine(
  int busId,
  double volume,
  bool paused,
  ffi.Pointer<ffi.UnsignedInt> handle,
);

PlayerErrors busPlayOnEngine(
  int busId,
  double volume,
  bool paused,
  ffi.Pointer<ffi.UnsignedInt> handle,
) => PlayerErrors.fromValue(_busPlayOnEngine(busId, volume, paused, handle));

/// Set the number of output channels for the bus (default is 2 = stereo).
///
/// [busId] the bus ID.
/// [channels] number of channels (1 = mono, 2 = stereo, etc.).
@ffi.Native<ffi.Int Function(ffi.UnsignedInt, ffi.UnsignedInt)>()
external int busSetChannels(int busId, int channels);

/// Enable or disable visualization data gathering for this bus.
/// Must be enabled before calling busCalcFFT, busGetWave,
/// or busGetApproximateVolume.
///
/// [busId] the bus ID.
/// [enable] true to enable, false to disable.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Bool)>()
external void busSetVisualizationEnable(int busId, bool enable);

/// Calculate and return 256 floats of FFT data for this bus.
/// The data ranges from low to high frequencies.
/// Visualization must be enabled first with busSetVisualizationEnable.
///
/// [busId] the bus ID.
/// Returns a pointer to 256 floats, or nullptr if the bus is not found.
@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.UnsignedInt)>()
external ffi.Pointer<ffi.Float> busCalcFFT(int busId);

/// Get 256 samples of wave data currently playing through this bus.
/// Visualization must be enabled first with busSetVisualizationEnable.
///
/// [busId] the bus ID.
/// Returns a pointer to 256 floats, or nullptr if the bus is not found.
@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.UnsignedInt)>()
external ffi.Pointer<ffi.Float> busGetWave(int busId);

/// Get the approximate output volume for a specific channel of this bus.
/// Useful for VU meters or level indicators.
/// Visualization must be enabled first.
///
/// [busId] the bus ID.
/// [channel] the output channel index (0 = left, 1 = right, etc.).
/// Returns the approximate volume, or 0 if the bus is not found.
@ffi.Native<ffi.Float Function(ffi.UnsignedInt, ffi.UnsignedInt)>()
external double busGetApproximateVolume(int busId, int channel);

/// Move a live voice (identified by its handle) into this bus.
/// The voice will be reparented so it plays through the bus.
/// Useful for dynamically routing sounds in/out of filtered busses.
///
/// [busId] the bus ID.
/// [voiceHandle] handle of the voice to annex.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.UnsignedInt)>()
external void busAnnexSound(int busId, int voiceHandle);

/// Get the number of voices currently playing through this bus.
///
/// [busId] the bus ID.
/// Returns the active voice count, or 0 if the bus is not found.
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt)>()
external int busGetActiveVoiceCount(int busId);

typedef dartVoiceEndedCallback_tFunction =
    ffi.Void Function(ffi.Pointer<ffi.UnsignedInt>);
typedef DartdartVoiceEndedCallback_tFunction =
    void Function(ffi.Pointer<ffi.UnsignedInt>);

/// Callback typedefs owned by bindings.cpp (the mixer-output, visualization,
/// buffering and metadata callback typedefs come from enums.h and
/// audiobuffer/metadata_ffi.h).
typedef dartVoiceEndedCallback_t =
    ffi.Pointer<ffi.NativeFunction<dartVoiceEndedCallback_tFunction>>;

/// Possible player errors.
///
/// WARNING: Keep these in sync with `lib/src/enums.dart`.
enum PlayerErrors {
  /// No error
  noError(0),

  /// Some parameter is invalid
  invalidParameter(1),

  /// File not found
  fileNotFound(2),

  /// File found, but could not be loaded
  fileLoadFailed(3),

  /// The sound file has already been loaded
  fileAlreadyLoaded(4),

  /// DLL not found, or wrong DLL
  dllNotFound(5),

  /// Out of memory
  outOfMemory(6),

  /// Feature not implemented
  notImplemented(7),

  /// Other error
  unknownError(8),

  /// Player not initialized
  nullPointer(9),

  /// Audio sound hash is not found
  soundHashNotFound(10),

  /// Player not initialized
  backendNotInited(11),

  /// Filter not found
  filterNotFound(12),

  /// Asking for wave and FFT is not enabled
  visualizationNotEnabled(13),

  /// The maximum number of filters has been reached (default is 8).
  maxNumberOfFiltersReached(14),

  /// The filter has already been added.
  filterAlreadyAdded(15),

  /// Player already inited.
  playerAlreadyInited(16),

  /// Audio handle is not found.
  soundHandleNotFound(17),

  /// Error getting filter parameter.
  filterParameterGetError(18),

  /// No playback devices were found.
  noPlaybackDevicesFound(19),

  /// Trying to add PCM data but the buffer is full or not large
  /// enough for the needed PCM data. Try increasing the buffer size.
  pcmBufferFull(20),
